traces/bug_220.txt
#220
kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:964: error: Deadlock
  Potential self deadlock. `CheckpointTest_MB21925_QueueDuplicateWithPersistenceCursorOnInitialMetaItem_Test::TestBody` locks `&(this->manager->queueLock)` in `class CheckpointTest_MB21925_QueueDuplicateWithPersistenceCursorOnInitialMetaItem_Test` twice.

kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:964:5: In method `CheckpointTest_MB21925_QueueDuplicateWithPersistenceCursorOnInitialMetaItem_Test::TestBody`
962.        MB21925_QueueDuplicateWithPersistenceCursorOnInitialMetaItem) {
963.     // Need a manager starting from seqno zero.
964.     createManager(0);
         ^
965.     ASSERT_EQ(0, this->manager->getHighSeqno());
966.     ASSERT_EQ(1, this->manager->getNumItems())

kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:964:5: Method call: `CheckpointTest::createManager`
962.        MB21925_QueueDuplicateWithPersistenceCursorOnInitialMetaItem) {
963.     // Need a manager starting from seqno zero.
964.     createManager(0);
         ^
965.     ASSERT_EQ(0, this->manager->getHighSeqno());
966.     ASSERT_EQ(1, this->manager->getNumItems())

kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:77:17: Method call: `CheckpointManager::registerCursorBySeqno`
75.     } else {
76.         cursor =
77.                 manager->registerCursorBySeqno("test_cursor",
                    ^
78.                                                0,
79.                                                CheckpointCursor::Droppable::Yes)

kv_engine/engines/ep/src/checkpoint_manager.cc:259:33:  locks `&(this->manager->queueLock)` in `class CheckpointTest_MB21925_QueueDuplicateWithPersistenceCursorOnInitialMetaItem_Test`
257.         uint64_t startBySeqno,
258.         CheckpointCursor::Droppable droppable) {
259.     std::lock_guard<std::mutex> lh(queueLock);
                                     ^
260.     return registerCursorBySeqno(lh, name, startBySeqno, droppable);
261. }

kv_engine/engines/ep/src/checkpoint_manager.cc:260:12: Method call: `CheckpointManager::registerCursorBySeqno`
258.         CheckpointCursor::Droppable droppable) {
259.     std::lock_guard<std::mutex> lh(queueLock);
260.     return registerCursorBySeqno(lh, name, startBySeqno, droppable);
                ^
261. }
262. 

kv_engine/engines/ep/src/checkpoint_manager.cc:283:13: Method call: `CheckpointManager::removeCursor`
281.     for (const auto& cursor : cursors) {
282.         if (cursor.first == name) {
283.             removeCursor(lh, cursor.second.get());
                 ^
284.             break;
285.         }

kv_engine/engines/ep/src/checkpoint_manager.cc:474:9:  locks `&(this->manager->queueLock)` in `class CheckpointTest_MB21925_QueueDuplicateWithPersistenceCursorOnInitialMetaItem_Test`
472.         queueLock.unlock();
473.         runGetItemsHook(cursor, vb.getId());
474.         queueLock.lock();
             ^
475.     }
476. 
